# libuvc

./: CMakeLists.txt
3rd/pthreads-w32-2-9-1-release/Pre-built.2/include/: pthread.h
src/: frame-mjpeg.c
